# opencv_quickstart

./: .gitignore  CMakeLists.txt  README  SETUP  dmiConfig.cmake.in
cmake/Modules/: Findlibsdl.cmake
tests/opencv_works/: CMakeLists.txt  Test.cpp
tests/sdl_works/: CMakeLists.txt  Test.cpp
tests/unit/template/: CMakeLists.txt  Test.c
